// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Route) Ask (Component) EndPoll (Render) matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="input-option input-option-endPoll"
  >
    <div
      class="input-option-radios"
    >
      <input
        checked=""
        class="input-radio input-checkbox-endType"
        id="end-never"
        name="endType"
        type="checkbox"
        value="endNever"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-never"
      >
        Don't End Poll
      </label>
      <input
        class="input-radio input-checkbox-endType"
        id="end-at"
        name="endType"
        type="checkbox"
        value="endAt"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-at"
      >
        End Poll At
      </label>
      <input
        class="input-radio input-checkbox-endType"
        id="end-in"
        name="endType"
        type="radio"
        value="endIn"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-in"
      >
        End Poll In
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`(Route) Ask (Component) EndPoll (Render) when endType is endAt matches snapshot 1`] = `
<div>
  <div
    class="input-option input-option-endPoll"
  >
    <div
      class="input-option-radios"
    >
      <input
        class="input-radio input-checkbox-endType"
        id="end-never"
        name="endType"
        type="checkbox"
        value="endNever"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-never"
      >
        Don't End Poll
      </label>
      <input
        checked=""
        class="input-radio input-checkbox-endType"
        id="end-at"
        name="endType"
        type="checkbox"
        value="endAt"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-at"
      >
        End Poll At
      </label>
      <input
        class="input-radio input-checkbox-endType"
        id="end-in"
        name="endType"
        type="radio"
        value="endIn"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-in"
      >
        End Poll In
      </label>
    </div>
    <div
      class="input-option-datepicker"
    >
      <div>
        Mocked DatePicker
      </div>
      <div>
        Mocked TimePicker
      </div>
    </div>
  </div>
</div>
`;

exports[`(Route) Ask (Component) EndPoll (Render) when endType is endIn matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="input-option input-option-endPoll"
  >
    <div
      class="input-option-radios"
    >
      <input
        class="input-radio input-checkbox-endType"
        id="end-never"
        name="endType"
        type="checkbox"
        value="endNever"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-never"
      >
        Don't End Poll
      </label>
      <input
        class="input-radio input-checkbox-endType"
        id="end-at"
        name="endType"
        type="checkbox"
        value="endAt"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-at"
      >
        End Poll At
      </label>
      <input
        checked=""
        class="input-radio input-checkbox-endType"
        id="end-in"
        name="endType"
        type="radio"
        value="endIn"
      />
      <label
        class="input-label input-label-options input-label-endType"
        for="end-in"
      >
        End Poll In
      </label>
    </div>
    <div
      class="input-option-slider"
    >
      <div
        class="input-option-slider-label"
      >
        undefined hour
      </div>
      <div>
        Mocked Slider
      </div>
    </div>
  </div>
</DocumentFragment>
`;
